# mana-flask

./: .gitignore  .python-version  Dockerfile  compose.yaml  pyproject.toml  run.sh  wsgi.py
db/: password.txt
flaskr/: __init__.py  app.py
flaskr/helpers/: degree.py  field.py  grade.py  student.py  subject.py
flaskr/models/: degree.py  student.py
flaskr/objects/: degree.py  field.py  grade.py  student.py  subject.py
postgres/: create_db.py
postgres/models/: base.py  degree.py  field.py  grade.py  student.py  subject.py
