[tool.poetry]
name = "python-flask-basic"
version = "0.1.0"
description = ""
authors = ["HimikoV <lukasz.kos98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
